Fix asset paths, update SW and CSS to use repo base; prepare deploy

--- a/src/components/common/SocialBar.css
+++ b/src/components/common/SocialBar.css
@@ -34,16 +34,21 @@
   background-image: url('/images/social-youtube.png');
 }
 
+.social a[aria-label="X"] { 
+  background-image: url('../images/social-x.png');
+}
+.social a[aria-label="Facebook"] { 
+  background-image: url('../images/social-facebook.png');
+}
+.social a[aria-label="Discord"] { 
+  background-image: url('../images/social-discord.png');
+}
+.social a[aria-label="YouTube"] { 
+  background-image: url('../images/social-youtube.png');
+}
 .social a[aria-label="Reddit"] { 
-  background-image: url('/images/social-reddit.png');
+  background-image: url('../images/social-reddit.png');
 }
-
 .social a[aria-label="TikTok"] { 
-  background-image: url('/images/social-tiktok.png');
-}
-
-.social a:hover {
-  opacity: 1;
-  transform: scale(1.2);
-  filter: brightness(1.2);
+  background-image: url('../images/social-tiktok.png');
 }
