Fix separated-files absolute image paths to use repo base

--- a/separated-files/html/components/Header.html
+++ b/separated-files/html/components/Header.html
@@ -44,7 +44,7 @@
                     <span class="music-icon">♪</span>
                 </button>
                 <button class="avatar" aria-label="User">
-                    <img src="/images/btn-login.png" alt="User Avatar" />
+                    <img src="/WEB1013-ASM/images/btn-login.png" alt="User Avatar" />
                 </button>
             </div>
         </div>
